--- a/MarketApp/build.gradle
+++ b/MarketApp/build.gradle
@@ -19,8 +19,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '3.3.0'
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.0'
+
 
     runtimeOnly 'org.postgresql:postgresql:42.7.3'
 }
