--- a/MarketApp/build.gradle
+++ b/MarketApp/build.gradle
@@ -22,8 +22,12 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.0'
 
-
     runtimeOnly 'org.postgresql:postgresql:42.7.3'
+
+    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+
 }
 
 tasks.named('test') {
